--- a/src/components/DVRCalculator/components/DVRDrives/DVRDrives.css
+++ b/src/components/DVRCalculator/components/DVRDrives/DVRDrives.css
@@ -11,5 +11,5 @@
 
 .raid, .drive, .amount {
     display: inline-block;
-    margin-right: 0.8rem;
+    margin-right: 0.7rem;
 }
