--- a/src/screens/Storage/Storage.css
+++ b/src/screens/Storage/Storage.css
@@ -3,7 +3,7 @@
 
 .root {
 	margin: 0 1rem;
-	min-width: 46rem;
+	min-width: 42rem;
 }
 
 .spacer {
